--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,12 +76,6 @@
     margin-top: 2vh;
 }
 
-/* .card:hover{
-    cursor: pointer;
-    background-color: var(--secondaryActive);
-    border: 0.2rem solid var(--main);
-} */
-
 .cardName{
     color: var(--main);
     font-weight: 600;
@@ -159,7 +153,7 @@
     align-items: center;
 }
 
-.pageNumber{
+.pageNumber, .pageNumberFiltered{
     margin-left: 1rem;
 }
 
@@ -173,14 +167,21 @@
     font-weight: bold;
 }
 
-.btnPrevious, .btnNext {
+.btnPrevious, .btnNext{
     background-color: var(--mainText);
     padding: 0 1rem;
-    margin: 0;;
+    margin: 0;
     width: auto;
 }
 
-.btnNext{
+.btnPreviousFiltered,.btnNextFiltered {
+    background-color: var(--main);
+    padding: 0 1rem;
+    margin: 0;
+    width: auto;
+}
+
+.btnNext, .btnNextFiltered{
     margin-left: 1rem;
 }
 
