--- a/assets/css/about/aboutMe.css
+++ b/assets/css/about/aboutMe.css
@@ -1,5 +1,5 @@
 .aboutMe{
-    background-image: url("../../img/PhotoMe.png");
+    background-image: url("../../img/PhotoMe.webp");
     background-position: top left;
     background-size: 50%;
     background-repeat: no-repeat;
