--- a/assets/css/about/tech.css
+++ b/assets/css/about/tech.css
@@ -31,6 +31,14 @@
     margin-left: 2.5vw;
 }
 
+.techImg:hover{
+    filter: brightness(125%);
+}
+
+.darkImg{
+    filter: invert(1);
+}
+
 .thanks{
     margin: 10vh 0;
 }
